--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -26,42 +26,54 @@ source-repository head
 library
   exposed-modules:
       Lib
+      InputOutput
+      Util
+      Statistics
+      Filepaths
+      RunSettings
+      DataTypes
   other-modules:
+      Main
       Paths_marketsim
   hs-source-dirs:
-      src
+      Src
+      App
+      Settings
+      Types
+  default-extensions:
+      ImportQualifiedPost
+      InstanceSigs
+      ScopedTypeVariables
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , containers
+    , parallel
+    , process
     , random
     , scotty
+    , text
+    , time
   default-language: Haskell2010
 
 executable marketsim-exe
   main-is: Main.hs
   other-modules:
+      Filepaths
       Paths_marketsim
   hs-source-dirs:
-      app
+      App
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , containers
     , marketsim
+    , parallel
+    , process
     , random
     , scotty
-  default-language: Haskell2010
-
-test-suite marketsim-test
-  type: exitcode-stdio-1.0
-  main-is: Spec.hs
-  other-modules:
-      Paths_marketsim
-  hs-source-dirs:
-      test
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      base >=4.7 && <5
-    , marketsim
-    , random
-    , scotty
+    , text
+    , time
   default-language: Haskell2010
