--- a/package.yaml
+++ b/package.yaml
@@ -10,19 +10,19 @@ extra-source-files:
 - README.md
 - CHANGELOG.md
 
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
-
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
 description:         Please see the README on GitHub at <https://github.com/githubuser/marketsim#readme>
 
 dependencies:
 - base >= 4.7 && < 5
 - random
 - scotty
+- bytestring
+- time
+- text
+- containers
+- parallel
+- process
+
 
 ghc-options:
 - -Wall
@@ -36,12 +36,28 @@ ghc-options:
 - -Wredundant-constraints
 
 library:
-  source-dirs: src
+  source-dirs: 
+    - Src
+    - App
+    - Settings
+    - Types
+  exposed-modules: 
+   - Lib
+   - InputOutput
+   - Util
+   - Statistics
+   - Filepaths
+   - RunSettings
+   - DataTypes
+  default-extensions:
+   - ImportQualifiedPost
+   - InstanceSigs
+   - ScopedTypeVariables
 
 executables:
   marketsim-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main:  Main.hs
+    source-dirs:  App
     ghc-options:
     - -threaded
     - -rtsopts
@@ -49,14 +65,22 @@ executables:
     dependencies:
     - marketsim
     - scotty
+    - bytestring
+    - random
+    - time
+    - text
+    - containers
+    - parallel
+    - process
 
-tests:
-  marketsim-test:
-    main:                Spec.hs
-    source-dirs:         test
-    ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
-    dependencies:
-    - marketsim
+# Comment out the tests section if you don't have test directory or modules.
+# tests:
+#   marketsim-test:
+#     main:                Spec.hs
+#     source-dirs:         test
+#     ghc-options:
+#     - -threaded
+#     - -rtsopts
+#     - -with-rtsopts=-N
+#     dependencies:
+#     - marketsim
