--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -7,11 +7,11 @@ cabal-version: 1.12
 name:           marketsim
 version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/marketsim#readme>
-homepage:       https://github.com/githubuser/marketsim#readme
-bug-reports:    https://github.com/githubuser/marketsim/issues
-author:         Honza
-maintainer:     example@example.com
-copyright:      2023 Author name here
+homepage:       https://github.com/SupremeSource/marketsim#readme
+bug-reports:    https://github.com/SupremeSource/marketsim/issues
+author:         Supreme Source
+maintainer:     zimulajan0@gmail.com
+copyright:      2023 Supreme Source
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/marketsim
+  location: https://github.com/SupremeSource/marketsim
 
 library
   exposed-modules:
