--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.1.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -32,6 +32,7 @@ library
       Filepaths
       RunSettings
       DataTypes
+      Colours
   other-modules:
       Main
       Paths_marketsim
