--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -55,6 +55,7 @@ library
     , parallel
     , process
     , random
+    , random-shuffle
     , scotty
     , text
     , time
@@ -79,6 +80,7 @@ executable marketsim-exe
     , parallel
     , process
     , random
+    , random-shuffle
     , scotty
     , text
     , time
