--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -85,3 +85,27 @@ executable marketsim-exe
     , text
     , time
   default-language: Haskell2010
+
+executable marketsim-server-exe
+  main-is: Main.hs
+  other-modules:
+      Paths_marketsim
+  hs-source-dirs:
+      Server
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , aeson-pretty
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , deriving-aeson
+    , marketsim
+    , parallel
+    , process
+    , random
+    , random-shuffle
+    , scotty
+    , text
+    , time
+  default-language: Haskell2010
