--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -33,8 +33,9 @@ library
       RunSettings
       DataTypes
       Colours
-  other-modules:
+      Generator
       PosCycle
+  other-modules:
       Main
       Paths_marketsim
   hs-source-dirs:
