--- a/package.yaml
+++ b/package.yaml
@@ -43,6 +43,7 @@ library:
     - src
     - app
     - Settings
+    - property-test
   
   exposed-modules: 
    - Lib
@@ -55,6 +56,7 @@ library:
    - Colours
    - Generator
    - PosCycle
+   - Tests
   default-extensions:
    - ImportQualifiedPost
    - InstanceSigs
