--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -50,12 +50,14 @@ library
       ScopedTypeVariables
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      aeson
+      QuickCheck
+    , aeson
     , aeson-pretty
     , base >=4.7 && <5
     , bytestring
     , containers
     , deriving-aeson
+    , hspec
     , parallel
     , process
     , random
@@ -73,12 +75,14 @@ executable marketsim-exe
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
+      QuickCheck
+    , aeson
     , aeson-pretty
     , base >=4.7 && <5
     , bytestring
     , containers
     , deriving-aeson
+    , hspec
     , marketsim
     , parallel
     , process
@@ -96,12 +100,40 @@ executable marketsim-server-exe
       Server
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
+      QuickCheck
+    , aeson
     , aeson-pretty
     , base >=4.7 && <5
     , bytestring
     , containers
     , deriving-aeson
+    , hspec
+    , marketsim
+    , parallel
+    , process
+    , random
+    , scotty
+    , text
+    , time
+  default-language: Haskell2010
+
+test-suite marketsim-test
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  other-modules:
+      Paths_marketsim
+  hs-source-dirs:
+      test
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      QuickCheck
+    , aeson
+    , aeson-pretty
+    , base >=4.7 && <5
+    , bytestring
+    , containers
+    , deriving-aeson
+    , hspec
     , marketsim
     , parallel
     , process
