--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
-TempCodeRunnerFile
+TempCoderunProgramnerFile
 
 # Vscode files ~ gitignore
 .vscode
