fixed amount bug

--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -63,6 +63,7 @@ library
     , parallel
     , process
     , random
+    , random-shuffle
     , scotty
     , text
     , time
@@ -91,6 +92,7 @@ executable marketsim-exe
     , parallel
     , process
     , random
+    , random-shuffle
     , scotty
     , text
     , time
@@ -118,6 +120,7 @@ executable marketsim-server-exe
     , parallel
     , process
     , random
+    , random-shuffle
     , scotty
     , text
     , time
@@ -147,6 +150,7 @@ test-suite marketsim-test
     , parallel
     , process
     , random
+    , random-shuffle
     , scotty
     , text
     , time
