--- a/marketsim.cabal
+++ b/marketsim.cabal
@@ -56,6 +56,7 @@ library
     , base >=4.7 && <5
     , bytestring
     , containers
+    , criterion
     , deriving-aeson
     , ghci-dap
     , haskell-dap
@@ -85,6 +86,7 @@ executable marketsim-exe
     , base >=4.7 && <5
     , bytestring
     , containers
+    , criterion
     , deriving-aeson
     , ghci-dap
     , haskell-dap
@@ -114,6 +116,7 @@ executable marketsim-server-exe
     , base >=4.7 && <5
     , bytestring
     , containers
+    , criterion
     , deriving-aeson
     , ghci-dap
     , haskell-dap
@@ -145,6 +148,7 @@ test-suite marketsim-test
     , base >=4.7 && <5
     , bytestring
     , containers
+    , criterion
     , deriving-aeson
     , ghci-dap
     , haskell-dap
