fixed volume list bugs

--- a/Settings/Settings.json
+++ b/Settings/Settings.json
@@ -11,12 +11,12 @@
     "POSITIONING_SETTINGS": {
       "runProgramlist": ["DWW","DWW","DWW","DWW","DWW","DWW","DWW","DWW","DWW","DWW"],
       "minvolume": 10000000,
-      "basecaseValueLongNew": 30000000,
-      "upperBoundLongNew": 300000000,
+      "minBuyVol": 30000000,
+      "maxBuyVol": 300000000,
       "basecaseValueShortClose": 30000000,
       "upperBoundShortClose": 300000000,
-      "basecaseValueShortNew": 10000000,
-      "upperBoundShortNew": 100000000,
+      "minSellVol": 10000000,
+      "maxSellVol": 100000000,
       "basecaseValueLongClose": 10000000,
       "upperBoundLongClose": 100000000,
       "buyTakerProb": 50,
